AVR programming in hex post.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: work in progress...
+title: "nuft"
 email: the.chaotic.coder@gmail.com
 description: sharing my projects
 baseurl: "" # the subpath of your site, e.g. /blog/
