--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "nuft"
-email: the.chaotic.coder@gmail.com
+email: mspieler101@gmail.com
 description: sharing my projects
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://nuft.github.io"
